Registration and volunteer forms really should open a new tab, amirite?

--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -72,11 +72,11 @@
                     <nav class="main_nav white">
                         <ul>
                             <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
-                            <li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external">Register <span class="label label-danger">Open</span></a></li>
+                            <li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external" target="_blank">Register <span class="label label-danger">Open</span></a></li>
                             <li><a href="~/sponsors" class="external">Sponsors</a></li>
                             <li><a href="~/talks" class="external">Sessions</a></li>
                             <li><a href="~/venue" class="external">Venue</a></li>
-                            <li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external">Volunteers <span class="label label-danger">Open</span></a></li>
+                            <li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external" target="_blank">Volunteers <span class="label label-danger">Open</span></a></li>
                             @*<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
                         </ul>
                     </nav>
@@ -94,11 +94,11 @@
             <div class="mobileAreaMenu">
                 <ul>
                     <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
-                    <li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external">Register <span class="label label-danger">Open</span></a></li>
+                    <li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external" target="_blank">Register <span class="label label-danger">Open</span></a></li>
                     <li><a href="~/sponsors" class="external">Sponsors</a></li>
                     <li><a href="~/talks" class="external">Sessions</a></li>
                     <li><a href="~/venue" class="external">Venue</a></li>
-                    <li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external">Volunteers <span class="label label-danger">Open</span></a></li>
+                    <li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external" target="_blank">Volunteers <span class="label label-danger">Open</span></a></li>
                     @*<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
                 </ul>
             </div>
