Updates sponsor page with all 2015 information

--- a/PghTechFest.Www/Views/Sponsors/Index.cshtml
+++ b/PghTechFest.Www/Views/Sponsors/Index.cshtml
@@ -12,7 +12,84 @@
                     <h1 class="title">Sponsors</h1>
                 </div>
                 <div class="welcome-text">
-                    <p>We have 2015 open opportunities for Platinum, Gold, Breakfast and Event sponsorships.</p>
+                    <h2>Premier Sponsors</h2>
+                    
+                    <div>
+                        <a href="http://www.synergystaffing.com" target="_sponsor">
+                            <img src="~/Content/images/sponsors/2015/synergy-staffing.png" title="Synergy Staffing" alt="Synergy Staffing"  style="margin:20px 0" />
+                        </a>
+                    </div>
+                    
+                    <div>
+                    <a href="http://www.teletracking.com/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/TeleTracking.png" title="TeleTracking" alt="TeleTracking" style="margin:20px 0" />
+                    </a>
+                    </div>
+                    
+                    
+                    <h2>Platinum Sponsors</h2>
+                    <div>
+                    <a href="http://aesynt.com" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/aesynt.png" title="Aesynt" alt="Aesynt" style="margin:40px 0" />
+                    </a>
+                    </div>
+                    
+                    <div>
+                    <a href="http://www.confluence.com" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/Confluence.png" title="Confluence" alt="Confluence" style="margin:20px 0" />
+                    </a>
+                    </div>
+                    
+                    <div>
+                    <a href="http://www.sdlcpartners.com/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/sdlc.png" title="SDLC Partners" alt="SDLC Partners" style="margin:20px 0; height:50%; width:50%" />
+                    </a>
+                    </div>
+                    
+                    <div>
+                    <a href="http://summa-tech.com" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/summa.png" title="Summa Technologies" alt="Summa Technologies" style="margin:20px 0" />
+                    </a>
+                    </div>
+                    
+				    <h2>Gold Sponsors</h2>
+                    <div>
+                    <a href="http://www.ae.com/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/ae.png" title="American Eagle" alt="American Eagle" style="margin:20px 0;" />
+                    </a>
+                    </div>
+                    
+                    <h2>Silver Sponsors</h2>
+                    <div>
+                    <a href="http://www.brandingbrand.com/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/brandingbrand.png" title="Branding Brand" alt="Branding Brand" style="margin:20px 0; height:50%; width:50%" />
+                    </a>
+                    </div>
+                    
+                    <h2>Breakfast Sponsor</h2>
+                    <div>
+                    <a href="http://octopusdeploy.com" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/octopus-deploy.png" title="Octopus Deploy" alt="Octopus Deploy" style="margin:20px 0; height:50%; width:50%" />
+                    </a>
+                    </div>
+                    
+                    <div>
+                    <a href="http://gentechpgh.com/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/gentech.png" title="Gentech" alt="Gentech" style="margin:20px 0;" />
+                    </a>
+                    </div>
+                    
+                    
+                    <h2>Event Sponsor</h2>
+                    <div>
+                    <a href="http://www.laroche.edu/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/laroche.png" title="LaRoche" alt="LaRoche" style="margin:20px 0; height:50%; width:50%" />
+                    </a>
+                    </div>
+                    
+                    <p><strong>---</strong></p>
+
+                    <p>We still have 2015 open opportunities for Platinum, Gold, Breakfast and Event sponsorships.</p>
 				    
                     <p><a class="btn btn-default" href="mailto:pittsburghtechfest@gmail.com">Email us for more information</a></p>
 
@@ -21,25 +98,6 @@
                     <iframe src="https://docs.google.com/forms/d/1FsyB32-Q6_uH8Fm3mBP8sflEPbs3ok-exEfF-KsI_hQ/viewform?embedded=true"
                         width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-                    <!--
-				    <h2>Platinum Sponsors</h2>
-                    <br/>
-				    
-				    <br/>
-                    <br/>
-				    <h2>Gold Sponsors</h2>
-                    <br/>
-				    
-				    <br/>
-                    <br/>
-				    <h2>Breakfast Sponsor</h2>
-                    <br/>
-				    
-				    <br/>
-                    <br/>
-				    <h2>Event Sponsor</h2>
-                    <br/>
-                    -->
                 </div>
             </div>
         </div>
