Make it official.

--- a/PghTechFest.Www/Views/Home/Index.cshtml
+++ b/PghTechFest.Www/Views/Home/Index.cshtml
@@ -52,11 +52,21 @@
                     </p>
 
                     <p>
-                        Topics will include coding, tools, agile, project management, etc. All development disciplines (devs, testers, 
-					PMs, DBAs, BAs etc.) and all development stacks (Ruby, Java, .Net, JavaScript, Python, SQL Server, Oracle, etc.) 
-					are welcome!
+                        Topics will include coding, tools, agile, project management, etc. All development disciplines (devs, testers,
+                        PMs, DBAs, BAs etc.) and all development stacks (Ruby, Java, .Net, JavaScript, Python, SQL Server, Oracle, etc.)
+                        are welcome!
                     </p>
-                </div>
+
+                    <div class="caption lfb cap_style_13_button" style="bottom: 75px; left: 60px; background: none; font-size: 12px;font-weight: normal"
+                         data-easing="easeOutBack">
+                        <p>
+                            Pittsburgh TechFest is dedicated to providing an outstanding conference experience for all our attendees, regardless of gender, sexual orientation, disability, physical appearance, body size, race, religion, financial status, hair color (or hair amount), platform preference, or text editor of choice.
+
+                            <span style="font-style: italic;"> For more details, see our <a href="~/CoC">Code of Conduct</a>.</span>
+                        </p>
+                        </div>
+
+                    </div>
             </div>
         </div>
     </div>
