Adjusts sponsors per Dave

--- a/PghTechFest.Www/Views/Sponsors/Index.cshtml
+++ b/PghTechFest.Www/Views/Sponsors/Index.cshtml
@@ -29,6 +29,12 @@
                     
                     <h2>Platinum Sponsors</h2>
                     <div>
+                    <a href="http://www.componentone.com/ultimate/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/grapecity2015.png" title="Grape City" alt="Grape City" style="margin:40px 0" />
+                    </a>
+                    </div>
+
+                    <div>
                     <a href="http://aesynt.com" target="_sponsor">
                         <img src="~/Content/images/sponsors/2015/aesynt.png" title="Aesynt" alt="Aesynt" style="margin:40px 0" />
                     </a>
@@ -53,12 +59,20 @@
                     </div>
                     
 				    <h2>Gold Sponsors</h2>
+                    @*
                     <div>
                     <a href="http://www.ae.com/" target="_sponsor">
                         <img src="~/Content/images/sponsors/2015/ae.png" title="American Eagle" alt="American Eagle" style="margin:20px 0;" />
                     </a>
                     </div>
+                    *@
                     
+                    <div>
+                    <a href="http://www.bellefield.com/" target="_sponsor">
+                        <img src="~/Content/images/sponsors/2015/Bellefield_Logo_250.png" title="Bellefield Systems, LLC" alt="Bellefield Systems, LLC" style="margin:20px 0;" />
+                    </a>
+                    </div>
+
                     <h2>Silver Sponsors</h2>
                     <div>
                     <a href="http://www.brandingbrand.com/" target="_sponsor">
