Added the schedule to the site.

--- a/PghTechFest.Www/Views/Talks/Index.cshtml
+++ b/PghTechFest.Www/Views/Talks/Index.cshtml
@@ -4,6 +4,9 @@
 }
 <!-- *** WELCOME STARTS *** -->
 <div id="welcome" ng-app="TalkApp">
+    <div>
+        <a href="~/Content/images/Schedule2015.pdf"><img src="~/Content/images/Schedule.png" /></a>
+    </div>
     <div class="container">
         <div ng-controller="TalkCtrl">
             <div ng-repeat="talk in talks">
