Closes call for volunteers

--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -76,8 +76,8 @@
                             <li><a href="~/sponsors" class="external">Sponsors</a></li>
                             <li><a href="~/talks" class="external">Sessions</a></li>
                             <li><a href="~/venue" class="external">Venue</a></li>
-                            <li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external" target="_blank">Volunteers <span class="label label-danger">Open</span></a></li>
-                            @*<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
+                            @*<li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external" target="_blank">Volunteers <span class="label label-danger">Open</span></a></li>
+                            <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
                         </ul>
                     </nav>
                     <!-- *** MAIN NAVIGATION END *** -->
@@ -98,8 +98,8 @@
                     <li><a href="~/sponsors" class="external">Sponsors</a></li>
                     <li><a href="~/talks" class="external">Sessions</a></li>
                     <li><a href="~/venue" class="external">Venue</a></li>
-                    <li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external" target="_blank">Volunteers <span class="label label-danger">Open</span></a></li>
-                    @*<li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
+                    @*<li><a href="https://docs.google.com/forms/d/1u5V_lrETsq30IoouBW8O2bXi4JF14h4lnZ1YQUO3muc/viewform" class="external" target="_blank">Volunteers <span class="label label-danger">Open</span></a></li>
+                    <li><a href="~/callforspeakers" class="external">Call For Speakers <span class="label label-danger">Open</span></a></li>*@
                 </ul>
             </div>
             <!--mobileAreaMenu-->
