--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
             <ul class="footer_adress">
                 <li><i class="fa fa-map-marker fa-2x"></i>LaRoche College<br />
                     June 13, 2015 - 8:00am<br />
-                    <a href="~/content">Venue Info</a></li>
+                    <a href="~/venue">Venue Info</a></li>
             </ul>
 
         </div>
