Adds mailing list to header menu

--- a/PghTechFest.Www/Views/Shared/_Layout.cshtml
+++ b/PghTechFest.Www/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                         <ul>
                             <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
                             @*<li><a href="https://www.eventbrite.com/e/pittsburgh-techfest-2015-tickets-16529674702" class="external" target="_blank">Register <span class="label label-danger">Open</span></a></li>*@
-                            <li>Register <span class="label label-danger">Closed</span></li>
+                            <li><a href="https://groups.google.com/forum/#!forum/pghtechfest" class="external">Mailing List</a></li>
                             <li><a href="~/sponsors" class="external">Sponsors</a></li>
                             <li><a href="~/talks" class="external">Sessions</a></li>
                             <li><a href="~/venue" class="external">Venue</a></li>
@@ -95,7 +95,7 @@
             <div class="mobileAreaMenu">
                 <ul>
                     <li><a href="http://blog.pghtechfest.com/" class="external">Blog</a></li>
-                    <li>Register <span class="label label-danger">Closed</span></li>
+                    <li><a href="https://groups.google.com/forum/#!forum/pghtechfest" class="external">Mailing List</a></li>
                     <li><a href="~/sponsors" class="external">Sponsors</a></li>
                     <li><a href="~/talks" class="external">Sessions</a></li>
                     <li><a href="~/venue" class="external">Venue</a></li>
