--- a/PghTechFest.Www/Views/Sponsors/Index.cshtml
+++ b/PghTechFest.Www/Views/Sponsors/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="logo_welcome">
-                    <h1 class="title">Sponsors</h1>
+                    <h1 class="title">2015 Sponsors</h1>
                 </div>
                 <div class="welcome-text">
                     <h2>Premier Sponsors</h2>
@@ -103,15 +103,7 @@
                     
                     <p><strong>---</strong></p>
 
-                    <p>We still have 2015 open opportunities for Platinum, Gold, Breakfast and Event sponsorships.</p>
-				    
-                    <p><a class="btn btn-default" href="mailto:pittsburghtechfest@gmail.com">Email us for more information</a></p>
-
-                    <p><a class="btn btn-default" href="https://drive.google.com/file/d/0Byw7-3j-_TQnUzJlZC1zeW5WeDQ/view?usp=sharing">Click here to download the sponsorship prospectus document</a></p>
-                    
-                    <iframe src="https://docs.google.com/forms/d/1FsyB32-Q6_uH8Fm3mBP8sflEPbs3ok-exEfF-KsI_hQ/viewform?embedded=true"
-                        width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
+                    <p>We have not yet determined sponsorship levels for 2016.<a class="btn btn-default" href="mailto:pittsburghtechfest@gmail.com">Email us</a> and we'll let you know the details when they become available.</p>
                 </div>
             </div>
         </div>
