Yeah, Eric shouldn't ever do web layout...

--- a/PghTechFest.Www/Views/Talks/Index.cshtml
+++ b/PghTechFest.Www/Views/Talks/Index.cshtml
@@ -22,7 +22,21 @@
     </div>
     -->
 <!-- *** WELCOME END *** -->
-<div><h3>Our call for talks will go out in March...</h3></div>
+<div id="welcome" style="background: white;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="logo_welcome">
+                    <h1 class="title">Sessions</h1>
+                </div>
+                <div class="welcome-text">
+                    <p>We will be putting out our call for talks in March. Please check back then!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- AngularJS -->
 <script type="text/javascript" src="~/scripts/angular.min.js"></script>
 <script type="text/javascript" src="~/Content/js/talks.js"></script>
